# shalom

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  FEATURE_IMPLEMENTATION_COMPLETE.md  GENERIC_MUTATION_RESULT_FEATURE.md  LICENSE  README.md  RUST_RUNTIME_IMPL.md  RUST_RUNTIME_v2.md  SKILL.md  Taskfile.yml  V2_flutter.md  _typos.toml  mkdocs.yml  mutation_todo.md  pubspec.yml  pyproject.toml  v2_todo.md
dart/shalom/rust/: Cargo.toml
dart/shalom/rust/src/: frb_generated.rs
dart/shalom/src/: CMakeLists.txt  shalom.c
rust/: Cargo.toml
rust/shalom_core/: Cargo.toml
rust/shalom_core/src/: context.rs  entrypoint.rs  lib.rs  shalom_config.rs
rust/shalom_core/src/operation/: context.rs  fragments.rs  mod.rs  parse.rs  types.rs
rust/shalom_core/src/schema/: context.rs  mod.rs  resolver.rs  type_extractor.rs  types.rs  utils.rs
rust/shalom_dart/: Cargo.toml  pubspec.yaml
rust/shalom_dart/android/: settings.gradle
rust/shalom_dart/example/: README.md  pubspec.yaml
rust/shalom_dart/example/integration_test/: simple_test.dart
rust/shalom_dart/example/lib/: main.dart
rust/shalom_dart/ios/: shalom_dart.podspec
rust/shalom_dart/lib/: shalom_dart.dart
rust/shalom_dart/lib/src/: runtime_client.dart
rust/shalom_dart/macos/: shalom_dart.podspec
rust/shalom_dart/rust/: Cargo.toml
rust/shalom_dart/rust/src/: frb_generated.rs
rust/shalom_dart/src/: lib.rs
rust/shalom_dart/windows/: CMakeLists.txt
rust/shalom_dart_codegen/: Cargo.toml  INPUT_REQUIREMENTS.md
rust/shalom_dart_codegen/__graphql__/: postdetails.shalom.dart  postsummary.shalom.dart  userinfo.shalom.dart
rust/shalom_dart_codegen/dart_tests/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
rust/shalom_dart_codegen/dart_tests/lib/: date_time.dart  point.dart
rust/shalom_dart_codegen/dart_tests/linux/: CMakeLists.txt
rust/shalom_dart_codegen/dart_tests/test/: TEST_SUMMARY.md
rust/shalom_dart_codegen/dart_tests/web/: index.html  manifest.json
rust/shalom_dart_codegen/dart_tests/windows/: CMakeLists.txt
rust/shalom_dart_codegen/flutter_tests/: README.md  pubspec.yaml  schema.graphql
rust/shalom_dart_codegen/flutter_tests/__graphql__/: shalom_init.shalom.dart
rust/shalom_dart_codegen/flutter_tests/lib/: main.dart
rust/shalom_dart_codegen/src/: dart_scanner.rs  lib.rs  main.rs
rust/shalom_dart_codegen/templates/: example.dart  fragment.dart.jinja  global_objects.dart.jinja  macros.dart.jinja  mutation.dart.jinja  mutation_widget.dart.jinja  objects.dart.jinja  operation.dart.jinja  operation_widget.dart.jinja  query.jinja.dart  schema.dart.jinja  schema.jinja.dart  selection_macros.dart.jinja  shalom_init.dart.jinja
rust/shalom_dart_codegen/tests/: INPUT_REQUIREMENTS.md  input_usecases_test.rs  mod.rs  query.graphql  usecases.rs  usecases_test.rs
rust/shalom_parser/: Cargo.toml
rust/shalom_parser/src/: lib.rs
rust/shalom_runtime/: Cargo.toml
rust/shalom_runtime/src/: gc.rs  lib.rs  normalization.rs  read.rs  runtime.rs  selection.rs
rust/shalom_runtime/tests/: cache.rs  execution.rs  gc.rs  link.rs  mutation.rs  retry.rs
(+738 files in other folders)
