
[workspace]
members = [
    "./shalom_dart_codegen",
    "./shalom_core", "shalom_runtime",
    "./shalom_dart",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
simple_logger = "5.0.0"
kash = "0.7.1"
log = "0.4.27"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
minijinja = "2.1.1"
glob = "0.3.2"
apollo-compiler = "=1.30.0"
