[package]
name = "shalom_dart_codegen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shalom"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
notify = "6.1"
notify-debouncer-full = "0.3"
serde = {workspace = true}
serde_json = {workspace = true}
minijinja = {workspace = true}
apollo-compiler = {workspace = true}
glob = {workspace = true}
pathdiff = "0.2"
anyhow = {workspace = true}
log = {workspace = true}
simple_logger = {workspace = true}
shalom_core = { path = "../shalom_core" }
lazy_static = "1.5.0"
