[package]
name = "shalom_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
shalom_runtime = { path = "../../../rust/shalom_runtime" }
shalom_core = { path = "../../../rust/shalom_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tokio-stream = "0.1.17"
anyhow = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
